# cpp-static-analyzer

./: .flake8  .gitignore  .gitmodules  LICENSE  README.md  command_manager.py  compile_commands.json  compile_db.py  compiledb.py  config.py  console.py  main.py  project.toml.old  pyproject.toml  requirements.txt  thread_manager.py
cpp_static_analyzer/: __init__.py  command_manager.py  compile_db.py  config.py  console.py  main.py  thread_manager.py
tests/: __init__.py  command_manager_test.py  compile_commands.json  compile_db_test.py  compiledb_test.py  config_test.py  thread_manager_test.py
